--- a/src/pages/add-kid/add-kid.html
+++ b/src/pages/add-kid/add-kid.html
@@ -1,13 +1,8 @@
-<!--
-  Generated template for the AddKidPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>AddKid</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Add Kid</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,4 +10,20 @@
 
 <ion-content padding>
 
+      <ion-item>
+        <ion-label>Name</ion-label>
+        <ion-input placeholder="name"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Last Name</ion-label>
+        <ion-input placeholder="Last name"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Parent(s)</ion-label>
+        <ion-input placeholder="Parent(s)"></ion-input>
+      </ion-item>
+
+      <button ion-button block clear>Add Kid</button>
 </ion-content>
