--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,5 +12,15 @@
 </ion-header>
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-list-header>
+      Items
+    </ion-list-header>
+    <ion-item *ngFor="let kid of kidsList$ | async"
+              detail-push
+              navPush="EditKidPage"
+              [navParams]="{kid: kid}">
+      {{kid.name}}
+    </ion-item>
+  </ion-list>
 </ion-content>
