--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,6 +20,7 @@
               detail-push
               navPush="EditKidPage"
               [navParams]="{kid: kid}">
+    <img [src]="imagenPreview">
       {{kid.name}}
     </ion-item>
   </ion-list>
