cargar fotos a firebase anadido

--- a/src/pages/add-kid/add-kid.html
+++ b/src/pages/add-kid/add-kid.html
@@ -3,6 +3,11 @@
 
   <ion-navbar color="primary">
     <ion-title>Add Kid</ion-title>
+    <ion-buttons end>
+      <button ion-button
+              (click)="crear_post()">
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
