--- a/src/pages/add-kid/add-kid.html
+++ b/src/pages/add-kid/add-kid.html
@@ -6,6 +6,7 @@
     <ion-buttons end>
       <button ion-button
               (click)="crear_post()">
+              crear post
       </button>
     </ion-buttons>
   </ion-navbar>
