--- a/src/pages/edit-kid/edit-kid.html
+++ b/src/pages/edit-kid/edit-kid.html
@@ -11,6 +11,10 @@
 <ion-content padding>
 
   <ion-item>
+    <img [src]="imagenPreview">
+  </ion-item>
+
+  <ion-item>
     <ion-label>Name</ion-label>
     <ion-input [(ngModel)]="kid.name"
                placeholder="name">
