--- a/src/pages/edit-kid/edit-kid.html
+++ b/src/pages/edit-kid/edit-kid.html
@@ -10,9 +10,9 @@
 
 <ion-content padding>
 
-  <ion-item>
+  <ion-card>
     <img [src]="imagenPreview">
-  </ion-item>
+  </ion-card>
 
   <ion-item>
     <ion-label>Name</ion-label>
