modificacion en add kid html

--- a/src/pages/add-kid/add-kid.html
+++ b/src/pages/add-kid/add-kid.html
@@ -16,6 +16,10 @@
 
 <ion-content padding>
 
+  <ion-item *ngIf="imagenPreview">
+    <img [src]="imagenPreview">
+  </ion-item>
+
   <button ion-button
           block
           item-left
@@ -43,10 +47,6 @@
         <ion-input [(ngModel)]="kid.parent"
                    placeholder="Parent(s)">
         </ion-input>
-      </ion-item>
-
-      <ion-item *ngIf="imagenPreview">
-        <image [src]="imagenPreview">
       </ion-item>
 
       <button ion-button
