corregido error en add-kid.html

--- a/src/pages/add-kid/add-kid.html
+++ b/src/pages/add-kid/add-kid.html
@@ -4,7 +4,7 @@
     <ion-title>Add Kid</ion-title>
     <ion-buttons end>
       <button ion-button
-              (click)="addImage(foto)">
+              (click)="crear_post()">
               crear post
       </button>
     </ion-buttons>
