add-image suspendido

--- a/src/pages/add-image/add-image.html
+++ b/src/pages/add-image/add-image.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
 
   <ion-navbar color="primary">
     <ion-title>Add Kid</ion-title>
@@ -21,4 +21,4 @@
       Camara
   </button>
 
-</ion-content>
+</ion-content> -->
