se reescribio el cargaArchivoProvider

--- a/src/pages/add-kid/add-kid.html
+++ b/src/pages/add-kid/add-kid.html
@@ -5,7 +5,7 @@
     <ion-buttons end>
       <button ion-button
               (click)="crear_post()">
-              crear post
+              Crear post
       </button>
     </ion-buttons>
   </ion-navbar>
