probando 2do metodo para cargar imafenes a firebase

--- a/src/pages/add-kid/add-kid.html
+++ b/src/pages/add-kid/add-kid.html
@@ -2,12 +2,12 @@
 
   <ion-navbar color="primary">
     <ion-title>Add Kid</ion-title>
-    <ion-buttons end>
+    <!-- <ion-buttons end>
       <button ion-button
               (click)="crear_post()">
               Crear post
       </button>
-    </ion-buttons>
+    </ion-buttons> -->
   </ion-navbar>
 
 </ion-header>
@@ -22,7 +22,7 @@
   <button ion-button
           block
           item-left
-          (click)="mostrar_camara()">
+          (click)="takePhoto()">
   <ion-icon name="camera"></ion-icon>
       Camara
   </button>
