--- a/src/pages/add-kid/add-kid.html
+++ b/src/pages/add-kid/add-kid.html
@@ -22,7 +22,7 @@
   <button ion-button
           block
           item-left
-          (click)="takePhoto()">
+          (click)="mostrar_camara()">
   <ion-icon name="camera"></ion-icon>
       Camara
   </button>
