--- a/src/pages/edit-kid/edit-kid.html
+++ b/src/pages/edit-kid/edit-kid.html
@@ -2,6 +2,12 @@
 
   <ion-navbar color="primary">
     <ion-title>{{kid?.name}}</ion-title>
+    <ion-buttons end>
+      <button ion-button
+              (click)="crear_post()">
+              Crear post
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
@@ -11,6 +17,14 @@
   <ion-card>
     <img [src]="imagenPreview">
   </ion-card>
+
+  <button ion-button
+          block
+          item-left
+          (click)="mostrar_camara()">
+  <ion-icon name="camera"></ion-icon>
+      Camara
+  </button>
 
   <ion-item>
     <ion-label>Name</ion-label>
