--- a/src/pages/edit-kid/edit-kid.html
+++ b/src/pages/edit-kid/edit-kid.html
@@ -31,6 +31,36 @@
   </ion-col>
 
   </ion-row>
+
+
+  <ion-row>
+    <ion-col col-6>
+  <ion-item *ngIf="parent">
+    <ion-avatar item-start>
+      <img src="assets/imgs/user.png">
+    </ion-avatar>
+    <ion-input [(ngModel)]="parent.name"
+               placeholder="name">
+    </ion-input>
+  </ion-item>
+
+  </ion-col>
+
+  <ion-col col-6>
+
+  <ion-item *ngIf="parent">
+
+     <ion-toggle ></ion-toggle>
+    <!-- <ion-avatar item-start>
+      <img src="assets/imgs/user.png">
+    </ion-avatar> -->
+
+    <ion-input [(ngModel)]="parent.lastName"
+               placeholder="Last name">
+    </ion-input>
+  </ion-item>
+</ion-col>
+</ion-row>
   </ion-grid>
 
   <ion-grid>
@@ -61,27 +91,6 @@
 
 </ion-row>
 </ion-grid>
-
-
-
-
-  <ion-item *ngIf="parent">
-    <ion-avatar item-start>
-      <img src="assets/imgs/user.png">
-    </ion-avatar>
-    <ion-input [(ngModel)]="parent.name"
-               placeholder="name">
-    </ion-input>
-  </ion-item>
-
-  <ion-item *ngIf="parent">
-    <ion-avatar item-start>
-      <img src="assets/imgs/user.png">
-    </ion-avatar>
-    <ion-input [(ngModel)]="parent.lastName"
-               placeholder="Last name">
-    </ion-input>
-  </ion-item>
 
 
   <button
