corregido error en el boton

--- a/src/pages/edit-kid/edit-kid.html
+++ b/src/pages/edit-kid/edit-kid.html
@@ -2,11 +2,14 @@
 
   <ion-navbar color="primary">
     <ion-title>{{kid?.name}}</ion-title>
+
     <ion-buttons end>
-      <ion-button ion-button (click)="crear_post()">
-        Crear post
-      </ion-button>
+      <button ion-button
+              (click)="crear_post()">
+              Crear post
+      </button>
     </ion-buttons>
+
   </ion-navbar>
 
 </ion-header>
