subir fotos terminado

--- a/src/pages/add-kid/add-kid.html
+++ b/src/pages/add-kid/add-kid.html
@@ -2,12 +2,12 @@
 
   <ion-navbar color="primary">
     <ion-title>Add Kid</ion-title>
-    <!-- <ion-buttons end>
+    <ion-buttons end>
       <button ion-button
               (click)="crear_post()">
               Crear post
       </button>
-    </ion-buttons> -->
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
@@ -19,13 +19,13 @@
     <img [src]="imagenPreview">
   </ion-item>
 
-  <!-- <button ion-button
+  <button ion-button
           block
           item-left
           (click)="mostrar_camara()">
   <ion-icon name="camera"></ion-icon>
       Camara
-  </button> -->
+  </button>
 
       <ion-item>
         <ion-label>Name</ion-label>
@@ -50,8 +50,3 @@
 
 
 </ion-content>
-
-<div *ngFor="let file of imageUploads | async">
-	{{file.name}}
-	<img src="{{file.url}}"/>
-</div>
