se movio el add image a addKidImage

--- a/src/pages/edit-kid/edit-kid.html
+++ b/src/pages/edit-kid/edit-kid.html
@@ -2,12 +2,6 @@
 
   <ion-navbar color="primary">
     <ion-title>{{kid?.name}}</ion-title>
-    <ion-buttons end>
-      <button ion-button
-              (click)="crear_post()">
-              Crear post
-      </button>
-    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
@@ -22,14 +16,6 @@
   <ion-card *ngIf="imagenPreview">
     <img [src]="imagenPreview">
   </ion-card>
-
-  <button ion-button
-          block
-          item-left
-          (click)="mostrar_camara()">
-  <ion-icon name="camera"></ion-icon>
-      Camara
-  </button>
 
 <ion-grid>
   <ion-row>
@@ -114,6 +100,15 @@
     block
     *ngIf="!kid.parentId"
     navPush="AddParentPage"
+    [navParams]="{kid: kid}">
+    Add Parent
+  </button>
+
+  <button
+    ion-button
+    outline
+    block
+    navPush="AddKidImagePage"
     [navParams]="{kid: kid}">
     Add Parent
   </button>
