--- a/src/pages/edit-kid/edit-kid.html
+++ b/src/pages/edit-kid/edit-kid.html
@@ -9,13 +9,13 @@
 <ion-content padding>
 
 
-  <!-- <ion-card>
+  <ion-card>
     <img src="assets/imgs/user.png">
-  </ion-card> -->
-
-  <ion-card *ngIf="imagenPreview">
-    <img [src]="imagenPreview">
   </ion-card>
+
+  <!-- <ion-card *ngIf="imagenPreview">
+    <img [src]="imagenPreview">
+  </ion-card> -->
 
 <ion-grid>
   <ion-row>
@@ -40,14 +40,16 @@
 
   <ion-row>
     <ion-col col-6>
-      <ion-item *ngIf="parent">
-         <ion-avatar item-start>
-           <img src="assets/imgs/user.png">
-         </ion-avatar>
+      <ion-avatar item-start>
+        <img src="assets/imgs/user.png">
+      </ion-avatar>
+      <button *ngIf="parent" ion-button clear>
+        {{ parent.name}} {{ parent.lastName }}
+         <!--
          <ion-input [(ngModel)]="parent.name"
                     placeholder="name">
-         </ion-input>
-       </ion-item>
+         </ion-input> -->
+       </button>
      </ion-col>
 
 
@@ -107,10 +109,17 @@
   <button
     ion-button
     outline
-    block
     navPush="AddKidImagePage"
     [navParams]="{kid: kid}">
-    Add Parent
+    Add Kid Image
+  </button>
+
+  <button
+    ion-button
+    outline
+    navPush="AddParentImagePage"
+    [navParams]="{parent: parent}">
+    Add Parent Image
   </button>
 
   <button ion-button
