--- a/src/pages/add-second-parent/add-second-parent.html
+++ b/src/pages/add-second-parent/add-second-parent.html
@@ -26,7 +26,7 @@
   <button ion-button
           block
           clear
-          navPush="EditKidPage"
+          navPush="HomePage"
           (click)="save(secondParent)">
       Save
   </button>
