--- a/src/pages/edit-kid/edit-kid.html
+++ b/src/pages/edit-kid/edit-kid.html
@@ -52,6 +52,7 @@
        </button>
      </ion-col>
      <ion-col col-6>
+
        <ion-avatar *ngIf="secondParent" item-start>
          <img src="assets/imgs/user.png">
        </ion-avatar>
@@ -61,6 +62,14 @@
           <ion-input [(ngModel)]="parent.name"
                      placeholder="name">
           </ion-input> -->
+        </button>
+        <button
+          ion-button
+          outline
+          *ngIf="!kid.secondParentId && kid.parentId"
+          navPush="AddSecondParentPage"
+          [navParams]="{kid: kid}">
+          Add Parent
         </button>
       </ion-col>
 
@@ -118,14 +127,7 @@
     Add Parent
   </button>
 
-  <button
-    ion-button
-    outline
-    block
-    navPush="AddSecondParentPage"
-    [navParams]="{kid: kid}">
-    Add sParent
-  </button>
+
 
   <button
     ion-button
