onceava prueba de fotos

--- a/src/pages/edit-kid/edit-kid.html
+++ b/src/pages/edit-kid/edit-kid.html
@@ -9,13 +9,13 @@
 <ion-content padding>
 
 
-  <ion-card>
+  <!-- <ion-card>
     <img src="assets/imgs/user.png">
-  </ion-card>
-
-  <!-- <ion-card *ngIf="imagenPreview">
-    <img [src]="imagenPreview">
   </ion-card> -->
+
+  <ion-card *ngIf="imagenPreview">
+    <img [src]="imagenPreview">
+  </ion-card>
 
 <ion-grid>
   <ion-row>
