doceava prueba de fotos

--- a/src/pages/add-kid-image/add-kid-image.html
+++ b/src/pages/add-kid-image/add-kid-image.html
@@ -4,7 +4,7 @@
     <ion-title>Add Image</ion-title>
     <ion-buttons end>
       <button ion-button
-              (click)="crear_post(archivo)">
+              (click)="crear_post(image)">
               Crear post
       </button>
     </ion-buttons>
