--- a/src/pages/add-kid-image/add-kid-image.html
+++ b/src/pages/add-kid-image/add-kid-image.html
@@ -23,6 +23,13 @@
         Camara
     </button>
 
+    <button ion-button
+            block
+            clear
+            (click)="save(image)">
+        Save
+    </button>
+
 
 
 
