--- a/src/pages/add-kid-image/add-kid-image.html
+++ b/src/pages/add-kid-image/add-kid-image.html
@@ -14,6 +14,9 @@
 
 <ion-content padding>
 
+  <ion-card *ngIf="imagenPreview">
+    <img [src]="imagenPreview">
+  </ion-card> 
 
     <button ion-button
             block
