prueba de fotos con archivo.img

--- a/src/pages/add-kid-image/add-kid-image.html
+++ b/src/pages/add-kid-image/add-kid-image.html
@@ -14,9 +14,13 @@
 
 <ion-content padding>
 
+  <!-- <button ion-button (click)="takePhoto()">Take Photo</button> -->
+
+  <!-- <img src=""> -->
+
   <ion-card *ngIf="imagenPreview">
     <img [src]="imagenPreview">
-  </ion-card> 
+  </ion-card>  -->
 
     <button ion-button
             block
