probando funcionabilidad de los botones

--- a/src/pages/add-kid-image/add-kid-image.html
+++ b/src/pages/add-kid-image/add-kid-image.html
@@ -20,7 +20,7 @@
 
   <ion-card *ngIf="imagenPreview">
     <img [src]="imagenPreview">
-  </ion-card>  -->
+  </ion-card> 
 
      <button ion-button
             block
