--- a/src/pages/add-kid-image/add-kid-image.html
+++ b/src/pages/add-kid-image/add-kid-image.html
@@ -2,25 +2,25 @@
 
   <ion-navbar color="primary">
     <ion-title>Add Image</ion-title>
-    <ion-buttons end>
+    <!-- <ion-buttons end>
       <button ion-button
               (click)="crear_post(archivo)">
               Crear post
       </button>
-    </ion-buttons>
+    </ion-buttons> -->
   </ion-navbar>
 
 </ion-header>
 
 <ion-content padding>
 
-  <!-- <button ion-button (click)="takePhoto()">Take Photo</button> -->
+  <button ion-button (click)="takePhoto()">Take Photo</button>
 
   <!-- <img src=""> -->
 
-  <ion-card *ngIf="imagenPreview">
+  <!-- <ion-card *ngIf="imagenPreview">
     <img [src]="imagenPreview">
-  </ion-card> 
+  </ion-card>
 
      <button ion-button
             block
@@ -35,7 +35,7 @@
             clear
             (click)="save(image)">
         Save
-    </button>
+    </button> -->
 
 
 
