--- a/src/pages/add-kid-image/add-kid-image.html
+++ b/src/pages/add-kid-image/add-kid-image.html
@@ -16,6 +16,14 @@
 
   <button ion-button (click)="takePhoto()">Take Photo</button>
 
+  <!-- <button ion-button
+          item-left
+          block
+          (click)="selectPhoto()">
+          <ion-icon name="photos"></ion-icon>
+          Select
+  </button> -->
+
   <!-- <img src=""> -->
 
   <!-- <ion-card *ngIf="imagenPreview">
