--- a/src/pages/add-kid-image/add-kid-image.html
+++ b/src/pages/add-kid-image/add-kid-image.html
@@ -14,15 +14,15 @@
 
 <ion-content padding>
 
-  <button ion-button (click)="takePhoto()">Take Photo</button>
+  <!-- <button ion-button (click)="takePhoto()">Take Photo</button> -->
 
-  <!-- <button ion-button
+  <button ion-button
           item-left
           block
           (click)="selectPhoto()">
           <ion-icon name="photos"></ion-icon>
           Select
-  </button> -->
+  </button>
 
   <!-- <img src=""> -->
 
