downloadUrl agregado a takePhoto

--- a/src/pages/add-kid-image/add-kid-image.html
+++ b/src/pages/add-kid-image/add-kid-image.html
@@ -14,23 +14,23 @@
 
 <ion-content padding>
 
-  <!-- <button ion-button (click)="takePhoto()">Take Photo</button> -->
+  <button ion-button (click)="takePhoto()">Take Photo</button>
 
-  <button ion-button
+  <!-- <button ion-button
           item-left
           block
           (click)="selectPhoto()">
           <ion-icon name="photos"></ion-icon>
           Select
-  </button>
+  </button> -->
 
   <!-- <img src=""> -->
 
   <!-- <ion-card *ngIf="imagenPreview">
     <img [src]="imagenPreview">
-  </ion-card>
+  </ion-card> -->
 
-     <button ion-button
+     <!-- <button ion-button
             block
             item-left
             (click)="mostrar_camara()">
