--- a/src/pages/edit-kid/edit-kid.html
+++ b/src/pages/edit-kid/edit-kid.html
@@ -8,14 +8,14 @@
 
 <ion-content padding>
 
-
+<!-- 
   <ion-card>
     <img src="assets/imgs/user.png">
-  </ion-card>
-<!--
-  <ion-card *ngIf="imagenPreview">
-    <img [src]="imagenPreview">
   </ion-card> -->
+
+  <ion-card>
+    <img [src]="kid.imageKey">
+  </ion-card>
 
 <ion-grid>
   <ion-row>
