--- a/src/pages/add-parent-image/add-parent-image.html
+++ b/src/pages/add-parent-image/add-parent-image.html
@@ -2,26 +2,14 @@
 
   <ion-navbar color="primary">
     <ion-title>Add Image</ion-title>
-    <ion-buttons end>
-      <button ion-button
-              (click)="crear_post()">
-              Crear post
-      </button>
-    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
-<ion-content padding>
-
-
-    <button ion-button
-            block
-            item-left
-            (click)="mostrar_camara()">
-    <ion-icon name="camera"></ion-icon>
-        Camara
-    </button>
-
-
+<ion-content padding text-center>
+   <button ion-button
+           navPush="EditKidPage"
+           (click)="takePhoto()">
+      Take Photo
+   </button>
 </ion-content>
