--- a/src/pages/edit-kid/edit-kid.html
+++ b/src/pages/edit-kid/edit-kid.html
@@ -8,14 +8,21 @@
 
 <ion-content padding>
 
-<!-- 
-  <ion-card>
-    <img src="assets/imgs/user.png">
-  </ion-card> -->
-
-  <ion-card>
+  <ion-card *ngIf="kid.imageKey">
     <img [src]="kid.imageKey">
   </ion-card>
+
+<ion-buttons text-center>
+  <button
+    *ngIf="!kid.imageKey"
+    ion-button
+    outline
+    navPush="AddKidImagePage"
+    [navParams]="{kid: kid}">
+    Add Kid Image
+  </button>
+</ion-buttons>
+
 
 <ion-grid>
   <ion-row>
@@ -25,21 +32,13 @@
   </ion-item>
 </ion-col>
 
-<!-- <ion-col col-6>
-  <ion-item>
-    <ion-input [(ngModel)]="kid.lastName"
-               placeholder="Last name">
-    </ion-input>
-  </ion-item>
-  </ion-col> -->
-
   </ion-row>
 
 
   <ion-row>
     <ion-col col-6 text-center>
-      <ion-avatar item-start>
-        <img src="assets/imgs/user.png">
+      <ion-avatar item-start *ngIf="parent">
+        <img [src]="parent.imageKey">
       </ion-avatar>
       <button *ngIf="parent" ion-button clear>
         {{ parent.name}} {{ parent.lastName }}
@@ -48,11 +47,30 @@
                     placeholder="name">
          </ion-input> -->
        </button>
+
+       <button
+         *ngIf="parent && !parent.imageKey"
+         ion-button
+         outline
+         navPush="AddParentImagePage"
+         [navParams]="{parent: parent}">
+         Add Parent Image
+       </button>
+
+       <button
+         ion-button
+         outline
+         block
+         *ngIf="!kid.parentId"
+         navPush="AddParentPage"
+         [navParams]="{kid: kid}">
+         Add Parent
+       </button>
      </ion-col>
      <ion-col col-6 text-center>
 
        <ion-avatar *ngIf="secondParent" item-start>
-         <img src="assets/imgs/user.png">
+         <img [src]="secondParent.imageKey">
        </ion-avatar>
        <button *ngIf="secondParent" ion-button clear >
          {{ secondParent.name}} {{ secondParent.lastName }}
@@ -61,6 +79,16 @@
                      placeholder="name">
           </ion-input> -->
         </button>
+
+        <button
+          *ngIf="secondParent && !secondParent.imageKey"
+          ion-button
+          outline
+          navPush="AddSecondParentImagePage"
+          [navParams]="{secondParent: secondParent}">
+          Add Parent Image
+        </button>
+
         <button
           ion-button
           outline
@@ -70,19 +98,6 @@
           Add Parent
         </button>
       </ion-col>
-
-
-    <!-- <ion-col col-6 >
-      <ion-item *ngIf="parent">
-        <ion-toggle ></ion-toggle> -->
-    <!-- <ion-avatar item-start>
-      <img src="assets/imgs/user.png">
-    </ion-avatar> -->
-       <!-- <ion-input [(ngModel)]="parent.lastName"
-                  placeholder="Last name">
-       </ion-input>
-     </ion-item>
-  </ion-col> -->
 </ion-row>
 </ion-grid>
 
@@ -113,35 +128,6 @@
      </ion-col>
    </ion-row>
 </ion-grid>
-
-
-  <button
-    ion-button
-    outline
-    block
-    *ngIf="!kid.parentId"
-    navPush="AddParentPage"
-    [navParams]="{kid: kid}">
-    Add Parent
-  </button>
-
-
-
-  <button
-    ion-button
-    outline
-    navPush="AddKidImagePage"
-    [navParams]="{kid: kid}">
-    Add Kid Image
-  </button>
-
-  <button
-    ion-button
-    outline
-    navPush="AddParentImagePage"
-    [navParams]="{parent: parent}">
-    Add Parent Image
-  </button>
 
   <button ion-button
           block
