--- a/src/pages/edit-kid/edit-kid.html
+++ b/src/pages/edit-kid/edit-kid.html
@@ -8,21 +8,14 @@
 
 <ion-content padding>
 
-  <ion-card *ngIf="kid.imageKey">
+<!--
+  <ion-card>
+    <img src="assets/imgs/user.png">
+  </ion-card> -->
+
+  <ion-card>
     <img [src]="kid.imageKey">
   </ion-card>
-
-<ion-buttons text-center>
-  <button
-    *ngIf="!kid.imageKey"
-    ion-button
-    outline
-    navPush="AddKidImagePage"
-    [navParams]="{kid: kid}">
-    Add Kid Image
-  </button>
-</ion-buttons>
-
 
 <ion-grid>
   <ion-row>
@@ -32,13 +25,21 @@
   </ion-item>
 </ion-col>
 
+<!-- <ion-col col-6>
+  <ion-item>
+    <ion-input [(ngModel)]="kid.lastName"
+               placeholder="Last name">
+    </ion-input>
+  </ion-item>
+  </ion-col> -->
+
   </ion-row>
 
 
   <ion-row>
     <ion-col col-6 text-center>
-      <ion-avatar item-start *ngIf="parent">
-        <img [src]="parent.imageKey">
+      <ion-avatar item-start>
+        <img src="assets/imgs/user.png">
       </ion-avatar>
       <button *ngIf="parent" ion-button clear>
         {{ parent.name}} {{ parent.lastName }}
@@ -47,30 +48,11 @@
                     placeholder="name">
          </ion-input> -->
        </button>
-
-       <button
-         *ngIf="parent && !parent.imageKey"
-         ion-button
-         outline
-         navPush="AddParentImagePage"
-         [navParams]="{parent: parent}">
-         Add Parent Image
-       </button>
-
-       <button
-         ion-button
-         outline
-         block
-         *ngIf="!kid.parentId"
-         navPush="AddParentPage"
-         [navParams]="{kid: kid}">
-         Add Parent
-       </button>
      </ion-col>
      <ion-col col-6 text-center>
 
        <ion-avatar *ngIf="secondParent" item-start>
-         <img [src]="secondParent.imageKey">
+         <img src="assets/imgs/user.png">
        </ion-avatar>
        <button *ngIf="secondParent" ion-button clear >
          {{ secondParent.name}} {{ secondParent.lastName }}
@@ -79,16 +61,6 @@
                      placeholder="name">
           </ion-input> -->
         </button>
-
-        <button
-          *ngIf="secondParent && !secondParent.imageKey"
-          ion-button
-          outline
-          navPush="AddSecondParentImagePage"
-          [navParams]="{secondParent: secondParent}">
-          Add Parent Image
-        </button>
-
         <button
           ion-button
           outline
@@ -98,6 +70,19 @@
           Add Parent
         </button>
       </ion-col>
+
+
+    <!-- <ion-col col-6 >
+      <ion-item *ngIf="parent">
+        <ion-toggle ></ion-toggle> -->
+    <!-- <ion-avatar item-start>
+      <img src="assets/imgs/user.png">
+    </ion-avatar> -->
+       <!-- <ion-input [(ngModel)]="parent.lastName"
+                  placeholder="Last name">
+       </ion-input>
+     </ion-item>
+  </ion-col> -->
 </ion-row>
 </ion-grid>
 
@@ -128,6 +113,35 @@
      </ion-col>
    </ion-row>
 </ion-grid>
+
+
+  <button
+    ion-button
+    outline
+    block
+    *ngIf="!kid.parentId"
+    navPush="AddParentPage"
+    [navParams]="{kid: kid}">
+    Add Parent
+  </button>
+
+
+
+  <button
+    ion-button
+    outline
+    navPush="AddKidImagePage"
+    [navParams]="{kid: kid}">
+    Add Kid Image
+  </button>
+
+  <button
+    ion-button
+    outline
+    navPush="AddParentImagePage"
+    [navParams]="{parent: parent}">
+    Add Parent Image
+  </button>
 
   <button ion-button
           block
