probando todas la foto del segundo papa

--- a/src/pages/edit-kid/edit-kid.html
+++ b/src/pages/edit-kid/edit-kid.html
@@ -73,7 +73,7 @@
 
 <!-- *ngIf="secondParent" -->
        <ion-avatar item-start>
-         <img [src]="kid.secondParentImage">
+         <img [src]="kid.secondParentImageKey">
        </ion-avatar>
        <button *ngIf="secondParent" ion-button clear >
          {{ secondParent.name}} {{ secondParent.lastName }}
