--- a/src/pages/add-second-parent-image/add-second-parent-image.html
+++ b/src/pages/add-second-parent-image/add-second-parent-image.html
@@ -8,7 +8,7 @@
 
 <ion-content padding text-center>
    <button ion-button
-           navPush="EditKidPage"
+           navPush="HomePage"
            (click)="takePhoto()">
       Take Photo
    </button>
